@@ -83,6 +83,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Delphi                 Járja Norbert, Benny Baumann
 - Div                    Gabriel Lorenzo
 - DOS                    Alessandro Staltari
+- ECMAScript             Michel Mariani
 - Eiffel                 Zoran Simic
 - eMail \ mbox           Benny Baumann
 - Erlang                 Benny Baumann, Dan Forest-Barbier, Uwe Dauernheim
